...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <searchBar contentMode="redraw" placeholder="Search recipes by food type" translatesAutoresizingMaskIntoConstraints="NO" id="QFx-OZ-gGc">
                    <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="tRF-m4-yd0"/>
                    </constraints>
                    <textInputTraits key="textInputTraits"/>
                    <connections>
...
